# tiny-lang

./: .gitignore  CMakeLists.txt  Jenkinsfile  LICENSE  README.md  conanfile.txt
.github/workflows/: cmake.yml  codeql-analysis.yml
src/: ast.cpp  ast.h  comparator.h  compiler.cpp  compiler.h  config.cpp  config.h  errors.cpp  errors.h  explorer.cpp  explorer.h  file.cpp  file.h  lexer.cpp  lexer.h  logger.cpp  logger.h  main.cpp  metadata.cpp  metadata.h  parser.cpp  parser.h  pipeline.cpp  pipeline.h  semantic.cpp  semantic.h  stream.h  stringutil.h  symtab.cpp  symtab.h  unicode.cpp  unicode.h
test/: CMakeLists.txt  comparator_test.cpp  config_test.cpp  explorer_test.cpp  file_test.cpp  lexer_test.cpp  parser_test.cpp  stream_test.cpp
